[metadata]
name = oasa
version = 0.14.1
author = Beda Kosata
author_email = beda@zirael.org
description = OASA is a free python library for manipulating and analyzing chemical structures.
long_description = file: README.md
long_description_content_type = text/markdown
url = http://bkchem.zirael.org/oasa_en.html
metadata_version = 2.2
license = GNU GPL
license_files = LICENSE
classifiers =
    License :: OSI Approved :: GNU GPL

[options]
packages = find:
include_package_data = True
install_requires =
    pycairo
python_requires = >=3.10

[options.entry_points]
console_scripts =
    flowchem=flowchem.cli:cli
